--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "logger",
-  "version": "1.0.0",
+  "name": "@assetory/logger",
+  "version": "0.1.0",
   "description": "A redis logger, written in typescript",
   "main": "index.js",
   "directories": {
@@ -11,9 +11,13 @@
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js",
     "lint": "eslint . --ext .ts",
-    "lint-and-fix": "eslint . --ext .ts --fix",
     "test": "mocha -r ts-node/register 'tests/**/*ts'",
-    "doc": "node_modules/.bin/jsdoc ./build/index.js"
+    "doc": "jsdoc ./build/index.js",
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm test && npm run lint",
+    "preversion" : "npm run lint",
+    "version" : "npm run format && git add -A src",
+    "postversion" : "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -21,7 +25,7 @@
   },
   "keywords": [],
   "author": "F. Rick Reich <frickreich@gmail.com>",
-  "license": "MIT",
+	"license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Assetory/logger/issues"
   },
