--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "mocha -r ts-node/register 'tests/**/*ts'",
     "doc": "jsdoc ./build/index.js",
     "prepare" : "npm run build",
-    "prepublishOnly" : "npm test && npm run lint",
+    "prepublishOnly" : "npm run lint",
     "preversion" : "npm run lint",
     "version" : "npm run format && git add -A src",
     "postversion" : "git push && git push --tags"
