--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@assetory/logger",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A redis logger, written in typescript",
-  "main": "index.js",
+  "main": "src/index.ts",
   "directories": {
     "test": "tests"
   },
