--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "strict": true,         
         "noImplicitAny": true,
         "esModuleInterop": true,
+        "declaration": true,
         "resolveJsonModule": true
     },
     "exclude": [
