--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@assetory/logger",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A redis logger, written in typescript",
+  "type": "module",
   "main": "src/index.ts",
   "directories": {
     "test": "tests"
