--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions":
     {
         "target": "es5",                          
-        "module": "commonjs",                    
+        "module": "ES2015",                    
         "lib": ["es6"],                     
         "allowJs": true,
         "outDir": "build",                          
