--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions":
     {
-        "target": "es5",                          
-        "module": "ES2015",                    
+        "target": "ES2015",                          
+        "module": "CommonJS",                    
         "lib": ["es6"],                     
         "allowJs": true,
         "outDir": "build",                          
