--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions":
     {
-        "target": "ES2015",                          
-        "module": "CommonJS",                    
-        "lib": ["es6"],                     
+        "target": "es5",
+        "module": "commonjs",              
+        "declaration": true,                
         "allowJs": true,
         "outDir": "build",                          
         "rootDir": "src",
@@ -11,7 +11,6 @@
         "noImplicitAny": true,
         "esModuleInterop": true,
         "moduleResolution": "node",
-        "declaration": true,
         "resolveJsonModule": true
     },
     "exclude": [
