--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,13 @@
       "lib": ["es2017", "es7", "es6", "dom"],
       "declaration": true,
       "outDir": "build",
+      "rootDir": "src",
       "strict": true,
       "esModuleInterop": true
     },
     "exclude": [
       "node_modules",
-      "build"
+      "_legacy",
+      "tests"
     ]
   }
