--- a/.github/workflows/github-pages-jsdoc.yml
+++ b/.github/workflows/github-pages-jsdoc.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          deploy_key: ${{ secrets.gh-pages-via-jsdoc }}
           publish_dir: ./out
