--- a/.github/workflows/github-pages-jsdoc.yml
+++ b/.github/workflows/github-pages-jsdoc.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.2.0
         with:
-          deploy_key: ${{ secrets.GITHUB_TOKEN  }}
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY  }}
           publish_branch: gh-pages
           publish_dir: ./public
           allow_empty_commit: true
