--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js",
     "lint": "eslint . --ext .ts",
-    "test": "mocha -r ts-node/register 'tests/**/*ts'",
+    "test": "nyc mocha -r ts-node/register 'tests/**/*ts'",
     "doc": "jsdoc ./build/index.js",
-    "prepare" : "npm run build",
-    "prepublishOnly" : "npm run lint",
-    "preversion" : "npm run lint",
-    "version" : "npm run format && git add -A src",
-    "postversion" : "git push && git push --tags"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -26,13 +26,14 @@
   },
   "keywords": [],
   "author": "F. Rick Reich <frickreich@gmail.com>",
-	"license": "Apache-2.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Assetory/logger/issues"
   },
   "homepage": "https://github.com/Assetory/logger#readme",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.14.6",
@@ -45,7 +46,9 @@
     "jsdoc": "^3.6.6",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
+    "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
+    "source-map-support": "^0.5.19",
     "ts-node": "^9.0.0"
   },
   "dependencies": {
